--- a/tutorias_javascript/1_nivelacion/index.html
+++ b/tutorias_javascript/1_nivelacion/index.html
@@ -7,7 +7,8 @@
     <title>Prueba 1</title>
 </head>
 <body>
-    <h1>Esto es un html de ejemplo</h1>
+    <h1>Esto es un html de ejemplo , SI!</h1>
+    <input type="text">
 </body>
 <script src="./index.js"></script>
 </html>
