--- a/tutorias_javascript/5_eventos/index.html
+++ b/tutorias_javascript/5_eventos/index.html
@@ -30,6 +30,8 @@
         <input type="submit" value="enviar">
 
     </form>
+
+    <img id ="imagen" src="" alt="">
     
     <script src="index.js" ></script>
 </body>
