--- a/tutorias_javascript/5_eventos/index.html
+++ b/tutorias_javascript/5_eventos/index.html
@@ -10,10 +10,10 @@
 
     <button id="boton1">esto es un boton</button>
 
-    <h1 class="textoclass" id="texto1">texto 1</h1>
+    <h1 class="textoclass cualquiera" id="texto1">texto 1</h1>
 
-    <h2 class="textoclass" id="texto2">texto 2</h2>
-    <h2 class="textoclass" id="texto3" >texto3</h2>
+    <h2 class="textoclass cualquiera" id="texto2">texto 2</h2>
+    <h2 class="textoclass cualquiera" id="texto3" >texto3</h2>
 
     <input id="inputtext" type="text">
 
