--- a/tutorias_javascript/ej_extras/index.html
+++ b/tutorias_javascript/ej_extras/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 
-    <h1 id="tatianaNombre" ></h1>
-    
+    <h1 id="prueba" ></h1>
+    <div id="ejemplo">
+
+    </div>
 
 <script src="./index.js" ></script>
 </body>
